# SCORE

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: config.py  latency.py  main.py  pyproject.toml  pytest.ini  requirements.txt  session_state.py
backend/audio_processor/: analyzer.py  scanner.py  tagger.py
backend/db/: database.py  queries.py
backend/llm_engine/: bench.py  bench_report.json  client.py  fallbacks.py  llamacpp_client.py  prompts.py  validator.py
backend/models/: orm.py  schemas.py
backend/nlp/: __init__.py  example_bank.py  fallback.py  intent_classifier.py  pipeline.py  prompt_templates.py  sanitize.py  validators.py
backend/routers/: auth.py  library.py  sessions.py
backend/scripts/: perf_baseline.json  perf_report.py  perf_run.py  perf_summary.json
backend/tests/: conftest.py  test_session_state.py
backend/tests/audio/: test_tagger.py
backend/tests/db/: test_queries.py  test_router_boundary.py
backend/tests/integration/: conftest.py  test_feedback_loop.py  test_session_flow.py
backend/tests/llm_engine/: test_constrained.py
backend/tests/nlp/: test_example_bank.py  test_fallback.py  test_intent_classifier.py  test_pipeline.py  test_sanitize.py  test_validators.py
backend/tests/nlp/fixtures/: intent_seed.jsonl
backend/tests/perf/: test_perf_smoke.py
backend/tests/replay/: test_fixture_replay.py
backend/tests/replay/fixtures/: eval_50.jsonl
backend/tests/routers/: test_ws_session.py
frontend/: README.md  package-lock.json  package.json
frontend/src/__tests__/: pxLint.test.ts  sessionSlice.test.ts  synth.test.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/session/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: FeedbackBar.tsx  NavBar.tsx  ParamEditor.tsx  RatingWidget.tsx  ScheduleViz.tsx
frontend/src/lib/: api.ts  synth.ts  wsClient.ts
frontend/src/stores/: authSlice.ts  sessionSlice.ts  store.ts
frontend/src/styles/: theme.css
