[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neurotune-backend"
version = "0.1.0"
description = "On-device LLM backend for NeuroTune adaptive focus-audio sessions"
requires-python = ">=3.10"

# Compatible-release bounds; pin exact versions from a freeze before deploy.
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "email-validator>=2.2,<3.0",
    "sqlalchemy>=2.0,<2.1",
    "aiosqlite>=0.20,<0.21",
    "transformers>=4.48,<5.0",
    "torch>=2.5,<3.0",
    "accelerate>=1.3,<2.0",
    "bitsandbytes>=0.45,<0.46",
    "librosa>=0.10,<0.11",
    "python-jose[cryptography]>=3.3,<4.0",
    "passlib[bcrypt]>=1.7,<2.0",
    "websockets>=14.0,<15.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.9,<0.10", "black>=24.10,<26", "mypy>=1.14,<2"]

# Imported as `backend.*`, so map that package to this directory.
[tool.setuptools]
packages = [
    "backend",
    "backend.audio_processor",
    "backend.db",
    "backend.llm_engine",
    "backend.models",
    "backend.routers",
]
package-dir = { "backend" = "." }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

# E501 here is prompt text inside a string literal; wrapping would change the LLM input.
[tool.ruff.lint.per-file-ignores]
"llm_engine/prompts.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true  # ML libs ship partial/no type stubs
warn_unused_ignores = true
